build_errors_v5.txt
warning: simple-image-viewer@0.9.9: icon.ico generated from icon.png
    Checking simple-image-viewer v0.9.9 (F:\Rust\SimpleImageViewer)
warning: use of deprecated type alias `image::io::Reader`: this type has been moved and renamed to image::ImageReader
 --> src\bin\make_trans.rs:5:26
  |
5 |     let img = image::io::Reader::open(src).unwrap().with_guessed_format().unwrap().decode().unwrap();
  |                          ^^^^^^
  |
  = note: `#[warn(deprecated)]` on by default

warning: `simple-image-viewer` (bin "make_trans") generated 1 warning
warning: `simple-image-viewer` (bin "make_trans" test) generated 1 warning (1 duplicate)
warning: hard linking files in the incremental compilation cache failed. copying files instead. consider moving the cache directory to a file system which supports hard linking in session dir `\\?\F:\Rust\SimpleImageViewer\target\debug\incremental\SimpleImageViewer-2q7pd9fr5qcr5\s-hhfv2cbzl7-0rbr17a-working`

warning: hard linking files in the incremental compilation cache failed. copying files instead. consider moving the cache directory to a file system which supports hard linking in session dir `\\?\F:\Rust\SimpleImageViewer\target\debug\incremental\SimpleImageViewer-0813kogxs1cho\s-hhfv2cbzll-1jpk1z1-working`

warning: unused import: `rodio::Source`
  --> src\audio.rs:11:5
   |
11 | use rodio::Source;
   |     ^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `HashSet`
 --> src\loader.rs:1:33
  |
1 | use std::collections::{HashMap, HashSet};
  |                                 ^^^^^^^

warning: unused import: `self`
  --> src\psb_reader.rs:14:15
   |
14 | use std::io::{self, BufReader, Read, Seek, SeekFrom};
   |               ^^^^

warning: use of deprecated type alias `egui::TopBottomPanel`: Use Panel::top or Panel::bottom instead
    --> src\app.rs:2743:27
     |
2743 |                     egui::TopBottomPanel::bottom("exif_footer")
     |                           ^^^^^^^^^^^^^^
     |
     = note: `#[warn(deprecated)]` on by default

warning: use of deprecated type alias `egui::TopBottomPanel`: Use Panel::top or Panel::bottom instead
    --> src\app.rs:2815:27
     |
2815 |                     egui::TopBottomPanel::bottom("xmp_footer")
     |                           ^^^^^^^^^^^^^^

error[E0609]: no field `cached_exif_text` on type `&mut ImageViewerApp`
   --> src\app.rs:339:14
    |
339 |         self.cached_exif_text = None;
    |              ^^^^^^^^^^^^^^^^ unknown field
    |
help: a field with a similar name exists
    |
339 -         self.cached_exif_text = None;
339 +         self.cached_exif_data = None;
    |

error[E0609]: no field `cached_exif_text` on type `&mut ImageViewerApp`
   --> src\app.rs:403:18
    |
403 |             self.cached_exif_text = None;
    |                  ^^^^^^^^^^^^^^^^ unknown field
    |
help: a field with a similar name exists
    |
403 -             self.cached_exif_text = None;
403 +             self.cached_exif_data = None;
    |

error[E0609]: no field `cached_exif_text` on type `&mut ImageViewerApp`
   --> src\app.rs:416:18
    |
416 |             self.cached_exif_text = None;
    |                  ^^^^^^^^^^^^^^^^ unknown field
    |
help: a field with a similar name exists
    |
416 -             self.cached_exif_text = None;
416 +             self.cached_exif_data = None;
    |

warning: use of deprecated method `egui::Context::screen_rect`: screen_rect has been split into viewport_rect() and content_rect(). You likely should use content_rect()
   --> src\app.rs:575:47
    |
575 |                         let screen_size = ctx.screen_rect().size();
    |                                               ^^^^^^^^^^^

warning: use of deprecated method `egui::Context::wants_pointer_input`: Renamed to egui_wants_pointer_input
   --> src\app.rs:869:79
    |
869 |         let ui_consuming_scroll = any_modal_open || self.show_settings || ctx.wants_pointer_input();
    |                                                                               ^^^^^^^^^^^^^^^^^^^

warning: use of deprecated method `egui::Context::screen_rect`: screen_rect has been split into viewport_rect() and content_rect(). You likely should use content_rect()
    --> src\app.rs:2387:31
     |
2387 |         let screen_rect = ctx.screen_rect();
     |                               ^^^^^^^^^^^

warning: use of deprecated method `egui::Context::screen_rect`: screen_rect has been split into viewport_rect() and content_rect(). You likely should use content_rect()
    --> src\app.rs:2735:34
     |
2735 |                 .default_pos(ctx.screen_rect().center() - egui::vec2(300.0, 200.0))
     |                                  ^^^^^^^^^^^

warning: use of deprecated method `egui::Context::screen_rect`: screen_rect has been split into viewport_rect() and content_rect(). You likely should use content_rect()
    --> src\app.rs:2807:34
     |
2807 |                 .default_pos(ctx.screen_rect().center() - egui::vec2(320.0, 240.0))
     |                                  ^^^^^^^^^^^

warning: unused variable: `num_channels`
  --> src\psb_reader.rs:84:9
   |
84 |     let num_channels = channels.min(4); // We only care about up to 4 channels (RGBA)
   |         ^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_num_channels`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0609`.
warning: `simple-image-viewer` (bin "SimpleImageViewer" test) generated 12 warnings (3 duplicates)
warning: simple-image-viewer@0.9.9: icon.ico generated from icon.png
error: could not compile `simple-image-viewer` (bin "SimpleImageViewer" test) due to 3 previous errors; 12 warnings emitted
warning: build failed, waiting for other jobs to finish...
warning: `simple-image-viewer` (bin "SimpleImageViewer") generated 12 warnings (8 duplicates)
warning: simple-image-viewer@0.9.9: icon.ico generated from icon.png
error: could not compile `simple-image-viewer` (bin "SimpleImageViewer") due to 3 previous errors; 12 warnings emitted
